--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ input {
   <div id="hiddenDiv" class="button-container">
 
     <label for="myDropdown">Type massage:</label>
-    <textarea id="msgtxt" name="msgtxt" rows="4" cols="50">MATA OYAWA DENENWA MENIKEE OYAGEN EKA MSG EKA AWATH AETI MATA ,OYA WENUWEN MATA BALAN INNAPULUWAN MENIKE,MANDANWA OYA GODAK MAHANSIWENWA KIYALA.UDE 10:00 TA KALIN CALL KARAN
+    <textarea id="msgtxt" name="msgtxt" rows="4" cols="50">MAGE PANATH ARAN OYA GEEWATH WENA ONA MAGE MANIKA.HEMDAMA WAGE MA  EKAMA WAGE ADAREI OYATA MAN KOHE HITIYATH OYATA MAWA ONA KIYALA HITUNA WELAWATA MAN OYA LAGA IDIEDAWAGEMA HETAH
     </textarea>
     
   
