--- a/index.html
+++ b/index.html
@@ -135,7 +135,12 @@ input {
         <button type="button" class="btn2" id="Camerabtn" onclick="Viedochatload()">Call</button>
      </dvi>
    <dvi>
-    <label id="showmsg" class="Lable" for="msg">Message:</label>
+    <label id="showmsg" class="Lable" for="msg">
+මං ඔයාට අවවාදයක් දෙන්නම් .....පරිස්සමින් ඉන්න <br/>
+මං ඔයා වෙනුවෙන් ප්‍රාර්ථනාවක් කරන්නම් ....සතුටින් ඉන්න <br/>
+මං ඔයාගෙන් ඉල්ලීමක් කරන්නම් .....මාව අමතක කරන්න එපා <br/>
+මං ඔයාට එකම එක ඇත්තක් කියන්න .... මං ඔයාට ආදරෙයි <br/>
+</label>
    </dvi>
     
  
